# FlatManager

./: .gitignore  IMPLEMENTATION_EXECUTION_PLAN.md  Makefile  NOTICE  README.md  REQUIREMENTS.md  REQUIREMENTS_PROJECT_OVERVIEW.md  build-clean.sh  docker-compose.yml
admin-ui/: .dockerignore  Dockerfile  README.md  REQUIREMENTS_ADMIN_UI.md  nginx.conf  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  admin.css  index.css  main.tsx  types.ts
api/: .dockerignore  .env.example  .env.xxx  DEPLOYMENT_NOTES.md  Dockerfile  README.md  REQUIREMENTS_API.md  alembic.ini  pyproject.toml
api/data/: flatmanager.db
api/migrations/: env.py
api/migrations/versions/: 3d3abba05bc0_create_initial_schema.py  a1b2c3d4e5f6_add_apartment_timezones.py  b4f7c9d2e1ab_add_guest_background_fields.py
api/src/flatmanager_api/: __init__.py  api_routes.py  db.py  device_queue.py  logging_config.py  main.py  models.py  schemas.py  security.py  settings.py
api/tests/: test_api_flow.py  test_db_compat.py  test_device_queue.py  test_health.py  test_logging_config.py  test_security.py
docs/: USER_DOCUMENTATION.md  generate-guest-screenshots.js  generate-guest-screenshots.ts  package-lock.json  package.json  tsconfig.json
docs/models/: DoorOpener v3.3mf  DoorOpener v3.stl
esp/: README.md  REQUIREMENTS_ESP.md  extra_script.py  platformio.ini
esp8266/: README.md  REQUIREMENTS_ESP8266.md  compile_commands.json  extra_script.py  platformio.ini
guest-ui/: .dockerignore  Dockerfile  REQUIREMENTS_GUEST_UI.md  index.html  package-lock.json  package.json  vite.config.ts
(+30 files in other folders)
