[project]
name = "flatmanager-api"
version = "0.1.0"
description = "FlatManager backend API"
readme = "README.md"
authors = [{ name = "Thomas Welsch", email = "ttww@gmx.de" }]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
flatmanager-api = "flatmanager_api.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
